fix bug 916847 - Allow settings menu to overflow zone landing header

--- a/media/redesign/stylus/zones.styl
+++ b/media/redesign/stylus/zones.styl
@@ -48,10 +48,8 @@
 
 .zone-landing-header
   create-gradient-background(#0095dd)
-  padding-bottom grid-spacing
   color #fff
   position relative
-  overflow hidden
   
   > .center
     padding-top first-content-top-padding
@@ -60,7 +58,8 @@
     p
       font-size larger-font-size
       font-weight light-font-weight
-      margin (2 * grid-spacing) 0 0 0
+      padding (2 * grid-spacing) 0 grid-spacing 0
+
 
   .zone-image
     position absolute
@@ -68,7 +67,7 @@
     top 100px
     display block
     width 468px
-    height 900px
+    bottom 0
 
   a.button
     compat-important(color, #fff)
